# crosspoint-reader-fork

./: .gitignore  README.md  USER_GUIDE.md  platformio.ini
.github/workflows/: ci.yml
.jules/: bolt.md
.skills/: SKILL.md
docs/: dictionary.md
docs/contributing/: README.md  touch-and-ui.md
lib/EpdFont/: EpdFont.cpp  EpdFontData.h  SdCardFont.cpp  SdCardFont.h  SdCardFontRegistry.cpp
lib/Epub/: Epub.cpp  Epub.h  epub_arena.c  epub_arena.h  epub_arena_new.cpp
lib/FsHelpers/: FsHelpers.cpp  FsHelpers.h
lib/GfxRenderer/: Bitmap.cpp  Bitmap.h  BitmapHelpers.h  GfxRenderer.cpp  GfxRenderer.h
lib/I18n/: I18n.cpp  I18n.h  I18nKeys.h
lib/JPEGDEC/: library.json
lib/JpegToBmpConverter/: JpegToBmpConverter.cpp  JpegToBmpConverter.h
lib/KOReaderSync/: KOReaderCredentialStore.cpp  KOReaderCredentialStore.h
lib/Logging/: Logging.cpp
lib/Markdown/: Markdown.cpp  Markdown.h
lib/Memory/: arena_allocator.c  arena_allocator.h
lib/MiniBidi/: BidiUtils.cpp  BidiUtils.h  bidi_pairs.t  bidiclasses.t  minibidi.c  minibidi.h
patches/: 0001-fix-x4-display-reset-and-busy.patch
scripts/: apply_sdk_patches.py  generate-font-manifest.py
src/: CrossPointSettings.cpp  CrossPointSettings.h  CrossPointState.cpp  CrossPointState.h  FontInstaller.cpp  JsonSettingsIO.cpp  MappedInputManager.cpp  MappedInputManager.h  OpdsServerStore.cpp  OpdsServerStore.h  PersistableStore.h  RecentBooksStore.cpp  RecentBooksStore.h  SettingsList.h  WifiCredentialStore.cpp  WifiCredentialStore.h  main.cpp
test/: CMakeLists.txt
test/natural_sort/: CMakeLists.txt  NaturalSortTest.cpp
(+204 files in other folders)
